# backend/src/main/java/xyz/zoltankerezsi/eventorganizer/dto/VoteOutput.java
@@ -1,0 +1,21 @@
+package xyz.zoltankerezsi.eventorganizer.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.Setter;
+import xyz.zoltankerezsi.eventorganizer.model.Vote;
+
+@Getter
+@Setter
+@AllArgsConstructor
+public class VoteOutput {
+    private String voteId;
+    private String username;
+    private String poll;
+    private String option;
+
+    public static VoteOutput fromVote(Vote vote) {
+        return new VoteOutput(vote.getVoteId(), vote.getUsername(), vote.getPoll().getPollId(),
+                vote.getOption().getOptionId());
+    }
+}
